tests/tooling/fixtures/native/execution/positive/switch_case_bitwise_shift_false_fallthrough_return.objc3
module SwitchCaseBitwiseShiftFalseFallthroughReturn;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while ((((1 << 3) | 1) ^ 9)) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
