tests/tooling/fixtures/native/execution/negative/switch_case_conditional_unknown_conservative_reject.objc3
module SwitchCaseConditionalUnknownConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      while (value ? false : true) {
        return 9;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
